@@ -192,6 +192,53 @@ void print_desc_aux(cptr txt, int y, int xx)
 }
 
 /*
+ * Dump the skill tree
+ */
+void dump_skills(FILE *fff)
+{
+	int i, j, max = 0;
+	int table[MAX_SKILLS][2];
+	char buf[80];
+
+	init_table(table, &max, TRUE);
+
+	Term_clear();
+
+	fprintf(fff, "\nSkills (points left: %d)", p_ptr->skill_points);
+
+	for (j = 0; j < max; j++)
+	{
+		int z;
+
+		i = table[j][0];
+
+		if ((p_ptr->s_info[i].value == 0) && (i != SKILL_MISC))
+		{
+			if (p_ptr->s_info[i].mod == 0) continue;
+		}
+
+		sprintf(buf, "\n");
+
+		for (z = 0; z < table[j][1]; z++) strcat(buf, "	 ");
+
+		if (!has_child(i))
+		{
+			strcat(buf, format(" . %s", s_info[i].name));
+		}
+		else
+		{
+			strcat(buf, format(" - %s", s_info[i].name));
+		}
+
+		fprintf(fff, "%-50s%02ld.%03ld [%01d.%03d]",
+		        buf, p_ptr->s_info[i].value / SKILL_STEP, p_ptr->s_info[i].value % SKILL_STEP,
+		        p_ptr->s_info[i].mod / 1000, p_ptr->s_info[i].mod % 1000);
+	}
+
+	fprintf(fff, "\n");
+}
+
+/*
  * Draw the skill tree
  */
 void print_skills(int table[MAX_SKILLS][2], int max, int sel, int start)
