@@ -188,8 +188,8 @@ PARTY_XP_BOOST = 2
 # Options : chance of creation of each categorie of monsters, in percent -
 # Zelazny, Pern, Lovecraft, Joke and vanilla(!). [10,100,100,1,100]
 # Note: joke monsters are nasty at the same time, so be warned.
-ZANG_MONSTERS = 10
+ZANG_MONSTERS = 1
 PERN_MONSTERS = 100
-CTH_MONSTERS = 100
+CTH_MONSTERS = 1
 JOKE_MONSTERS = 1
 VANILLA_MONSTERS = 100
