@@ -1138,7 +1138,9 @@ To find the latest change quickly, search ==== :)
 [B] 'n' and 'p' didn't work well in the skill screen (common with ToME)
 [C] 'c' and 'o' key available in skill screen (for quick browsing)
 
-
+24/06/2002
+[C]- .mangrc changed to .tomenetrc
+[C]- Chardump ability in the char screen
 
 ** [B] stands for Bugfix.
 ** [C] stands for Client changes.
